Fix Event log header shading & navigation hover over shading
- On event log page, the table heading with "Timestamp" was not showing the
correct color upon hover over, which has been corrected (it should be a darker
grey)
- On navigation, the icons should be the same color as the section headings
upon hover over; this fixes the icons to change blue (like text next to them)
upon hover over

--- a/app/common/styles/directives/app-navigation.scss
+++ b/app/common/styles/directives/app-navigation.scss
@@ -35,6 +35,9 @@
         .nav-link{
           color: $primary-light;
         }
+        img{
+          @include whitefilter
+        }
       }
     }
     > li > a,
@@ -97,6 +100,9 @@
     border-radius: 0;
     border: 1px solid $color--blue-35;
     outline: 0;
+    img {
+      @include LtBluefilter;
+    }
   }
   .icon {
     margin-left: .3em;
