--- a/app/server-health/styles/syslog.scss
+++ b/app/server-health/styles/syslog.scss
@@ -82,18 +82,13 @@
     min-width:20%;
     text-align:left;
     font-weight: 500;
-    background-color: $color--grey-20;
     @include mediaQuery(x-small) {
-      background-color: inherit;
       font-weight: inherit;
       max-width:200px;
     }
     @include mediaQuery(medium) {
       font-weight: inherit;
     }
-  }
-  .fixed-table-header .sys-log__col-date{
-    background-color: $color--grey-20;
   }
 
   .sys-log__col-desc{
@@ -111,14 +106,13 @@
   .content__search {
     margin: 0;
   }
+
   #content__search-input {
     width:100%;
   }
-  .status-icon{
-    max-width:32px;
-    margin-right:0px;
-    padding:0px;
-  }
+
+
+
   .sys-log__col-sev{
     @include mediaQuery(x-small) {
       max-width:150px;
@@ -144,3 +138,6 @@
     color: $color--grey-70;
   }
 }
+
+
+
